[gd_scene load_steps=4 format=3 uid="uid://cet7unjnt0wpw"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_eobc0"]
[ext_resource type="Texture2D" uid="uid://bl3i3jeglrbxq" path="res://graphics/player/player.png" id="1_wkrml"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ejeoi"]
radius = 54.0833

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_eobc0")

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(40, 4)
rotation = 1.5708
texture = ExtResource("1_wkrml")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ejeoi")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]

[node name="ProjectileStartPositions" type="Node2D" parent="."]
position = Vector2(1, -1)
rotation = 1.5708

[node name="Pos1" type="Marker2D" parent="ProjectileStartPositions"]
position = Vector2(24, -133)

[node name="Pos2" type="Marker2D" parent="ProjectileStartPositions"]
position = Vector2(17, -133)

[node name="Pos3" type="Marker2D" parent="ProjectileStartPositions"]
position = Vector2(31, -133)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_granade_timer_timeout"]
